- Refactored pointer helpers to read more than one byte at a time for batch reads. Added unit tests to verify the logic. - For ipv6 method, batch size can go up to page size. - Added more useful SDK mappings from FreeBSD headers for VM and PMap.